<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph2"
        android:layout_width="320dp"
        android:layout_height="144dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/barrier3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_calcular_secante"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="60dp"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="39dp"
        android:text="Calcular "
        app:layout_constraintBottom_toTopOf="@+id/graph2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline" />

    <EditText
        android:id="@+id/editText_função_secante"
        android:layout_width="199dp"
        android:layout_height="45dp"
        android:layout_marginEnd="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_função_muller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView_função_muller" />

    <TextView
        android:id="@+id/textView_função_muller"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_marginEnd="60dp"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="5dp"
        android:text="@string/textView_função_muller"
        android:textSize="@dimen/função_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView_x0_secante"
        android:layout_width="57dp"
        android:layout_height="19dp"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="9dp"
        android:text="@string/textView_x0_muller"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editText_função_secante" />

    <EditText
        android:id="@+id/editText_x0_secante"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_x0_muller"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView_x0_secante" />

    <TextView
        android:id="@+id/textView_x1_secante"
        android:layout_width="57dp"
        android:layout_height="17dp"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:text="@string/textView_x1_muller"
        app:layout_constraintStart_toEndOf="@+id/textView_x0_secante"
        tools:layout_editor_absoluteY="122dp" />

    <EditText
        android:id="@+id/editText_x1_muller"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_x1_muller"
        app:layout_constraintStart_toEndOf="@+id/editText_x0_secante"
        app:layout_constraintTop_toBottomOf="@+id/textView_x1_secante" />

    <TextView
        android:id="@+id/textView_x2_muller"
        android:layout_width="57dp"
        android:layout_height="19dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:text="x "
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="273dp" />

    <EditText
        android:id="@+id/editText_x2_muller"
        android:layout_width="60dp"
        android:layout_height="47dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="x "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_x2_muller" />

    <TextView
        android:id="@+id/textView_tol_falsa"
        android:layout_width="90dp"
        android:layout_height="19dp"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:text="Tolerância"
        app:layout_constraintBottom_toTopOf="@+id/editText_tol_secante"
        app:layout_constraintStart_toEndOf="@+id/guideline" />

    <EditText
        android:id="@+id/editText_tol_secante"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Tol"
        app:layout_constraintBottom_toTopOf="@+id/btn_calcular_secante"
        app:layout_constraintStart_toEndOf="@+id/guideline" />

    <TextView
        android:id="@+id/textView_n_secante"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/textView_n_muller"
        app:layout_constraintBottom_toTopOf="@+id/editText_n_secante"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText_n_secante"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText_n_muller"
        app:layout_constraintBottom_toTopOf="@+id/btn_calcular_secante"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

</android.support.constraint.ConstraintLayout>